@@ -1,3 +1,6 @@
+2010-09-25
+ * added capability to delete targets
+
 2010-09-24
  * add PI and program name (as labels)
 
